Minor enhancements